# competitive-programming

./: .gitignore  Pipfile  README.md  pyproject.toml
advent-of-code/2019/day1/: solve_test.py
advent-of-code/2019/day2/: solve.py
advent-of-code/2019/day3/: solve_test.py
algorithms/2sat/: solver_test.py
classical/2sat/: readme.md  solver.py
codejam/dragon-maze/: readme.md  solve.py
codejam/stock-charts/: notes.md
peking/november-rain/: solve.py  solve_test.py
solutions/advent-of-code/: readme.md
solutions/advent-of-code/2018-rust/: Cargo.toml
solutions/advent-of-code/2018-rust/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day11.rs
solutions/advent-of-code/2019/day03/: solve.py
solutions/advent-of-code/2019/day04/: solve.py  solve_test.py
solutions/advent-of-code/2019/day05/: solve.py  solve_test.py
solutions/advent-of-code/2019/day06/: solve.py  (+1 more)
solutions/codejam/dragon-maze/: solve.py
solutions/codejam/stock-charts/: solve.py
solutions/kattis/ballsandneedles/: output_example.txt  readme.md  solve.py
solutions/peking/november-rain/: readme.md
solutions/spoj/pfdep/: readme.md  solve.py
solutions/spoj/plndtree/: README.md  generate_input.py  input1.txt  input2.txt  input_random.txt  solve.go  solve.py  solve_test.py
solutions/spoj/quest4/: 1.in  readme.md  solve.py
solutions/spoj/shorten_nextperm/: readme.md  solve.py  solve_test.py
solutions/synacor-challenge/: arch-spec  coins.py  package-lock.json  package.json  readme.md  tsconfig.json
solutions/synacor-challenge/src/: index.ts  misc.ts  queue.ts  vm.test.ts  vm.ts
spoj/gss1/: readme.md  solve.py
spoj/rectangle/: input_1  notes.md  solve.py
uva/10319-manhattan/: notes.md  readme.md  solve.py
uva/148-anagram-checker/: readme.md  solve.py
(+45 files in other folders)
