[tool.poetry]
name = "competitive-programming"
version = "0.0.0"
description = ""
authors = ["Francisco-Pierre Puig <puig.franciscopierre@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0", allows-prereleases = true}
pytest = "^5.3"
pytest-cov = "^2.8"

[tool.black]
skip-numeric-underscore-normalization = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
