[package]
name = "advent-of-code-2018"
version = "0.0.0"
authors = ["Francisco-Pierre Puig <puig.franciscopierre@gmail.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
regex = "1.3.7"

[[bin]]
name = "day01"
path = "src/day01.rs"

[[bin]]
name = "day02"
path = "src/day02.rs"

[[bin]]
name = "day03"
path = "src/day03.rs"

[[bin]]
name = "day04"
path = "src/day04.rs"

[[bin]]
name = "day05"
path = "src/day05.rs"

[[bin]]
name = "day06"
path = "src/day06.rs"

[[bin]]
name = "day07"
path = "src/day07.rs"

[[bin]]
name = "day08"
path = "src/day08.rs"

[[bin]]
name = "day11"
path = "src/day11.rs"
